added cosmos db

--- a/api/.env.example
+++ b/api/.env.example
@@ -8,3 +8,8 @@ DEBUG=false
 # ElevenLabs Settings
 # Get your webhook secret from ElevenLabs dashboard
 ELEVENLABS_WEBHOOK_SECRET=your_elevenlabs_webhook_secret_here
+
+# Azure Cosmos DB Settings
+# Connection string format: AccountEndpoint=https://YOUR_ACCOUNT.documents.azure.com:443/;AccountKey=YOUR_KEY;
+COSMOS_CONNECTION_STRING=your_cosmos_connection_string_here
+COSMOS_DATABASE_NAME=holly-morty-db
