added outbound call api

--- a/api/.env.example
+++ b/api/.env.example
@@ -8,6 +8,8 @@ DEBUG=false
 # ElevenLabs Settings
 # Get your webhook secret from ElevenLabs dashboard
 ELEVENLABS_WEBHOOK_SECRET=your_elevenlabs_webhook_secret_here
+# Get your API key from ElevenLabs dashboard
+XI_API_KEY=your_elevenlabs_api_key_here
 
 # Azure Cosmos DB Settings
 # Connection string format: AccountEndpoint=https://YOUR_ACCOUNT.documents.azure.com:443/;AccountKey=YOUR_KEY;
